welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:3: error: reassignment to val
  if(aSmile = bSmile)
            ^monkeyTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if(aSmile = bSmile)
  ^